--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Title of the document</title>
 </head>
 <body>
-    <h1>PDF Example</h1>
-    <p>Open a PDF file <a href="https://www.soundczech.cz/temp/lorem-ipsum.pdf">example</a>.</p>
+    <h1>How to disable downloading of the PDF document</h1>
+    <iframe src="/files/HemchandNizampatnam.pdf#toolbar=0" width="100%" height="500px"></iframe>
 </body>
 </html>
