--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title of the document</title>
+    <title>Hemchand || Senior .Net Developer</title>
 </head>
 <body>
-    <h1>How to disable downloading of the PDF document</h1>
-    <iframe src="/files/HemchandNizampatnam.pdf#toolbar=0" width="100%" height="500px"></iframe>
+    <iframe src="files/HemchandNizampatnam.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px"></iframe>
+    <!--<iframe src="C:\Prev_Backup\Personal\Tejansh\HemchandNizampatnam.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px"></iframe>-->
 </body>
 </html>
