Uploaded profile picture

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hemchand || Senior .Net Developer</title>
+    <title>Hemchand Nizamaptnam</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="files/HemchandNizampatnam.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px"></iframe>
+    <img src="files/Hemchand_Profile.jpeg" alt="ProfilePic" style="width:100%;">
+    <!--<iframe src="files/HemchandNizampatnam.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px"></iframe>-->
     <!--<iframe src="C:\Prev_Backup\Personal\Tejansh\HemchandNizampatnam.pdf#view=FitH&toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="600px"></iframe>-->
 </body>
 </html>
